--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -20,6 +20,8 @@ Resources:
 
 Cargoes:
   - Name: get-started
+    # See all options:
+    # https://docs.docker.com/engine/api/v1.42/#tag/Container/operation/ContainerCreate
     Container:
       Image: nexthat/nanocl-get-started:latest
       Env :
