--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "nanocl_stubs"
-version = "0.0.9"
+version = "0.0.8"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
-description = "Nanocl shared models"
+description = "Nanocl shared data model"
 readme = "readme.md"
 license = "MIT OR Apache-2.0"
 homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
