--- a/.github/workflows/nightly_nanocl.yml
+++ b/.github/workflows/nightly_nanocl.yml
@@ -18,41 +18,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v2
-    - name: Cache register
-      uses: actions/cache@v3
-      with:
-        path: /tmp/.buildx-cache
-        key: buildx-cache
-    - name: Set branch name
-      run: echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-    - name: Print branch name
-      run: echo $BRANCH_NAME
-    - name: Get bin name
-      run: echo "BINARY_NAME=$(echo $BRANCH_NAME | awk -F- '{print $2}')" >> $GITHUB_ENV
-    - name: Set version
-      run: echo "VERSION=$(echo $BRANCH_NAME | awk -F- '{print $3}')" >> $GITHUB_ENV
-    - name: Print BINARY_NAME and VERSION
+    # Extract branch info
+    - name: Set info
       run: |
+        echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
+        echo "BINARY_NAME=$(echo $BRANCH_NAME | awk -F- '{print $2}')" >> $GITHUB_ENV
+        echo "CHANNEL=$(echo $BRANCH_NAME | awk -F- '{print $1}')" >> $GITHUB_ENV
+        echo "VERSION=$(echo $BRANCH_NAME | awk -F- '{print $3}')" >> $GITHUB_ENV
+        echo $BRANCH_NAME
         echo $BINARY_NAME
+        echo $CHANNEL
         echo $VERSION
-    - name: Build binary
+    # Package nanocl into a .deb
+    - name: Package
       run: ./scripts/release_nanocl.sh
-    # - name: Tag image
-    #   run: |
-    #     docker tag $BINARY_NAME:nightly-$VERSION nexthat/$BINARY_NAME:nightly
-    #     docker tag $BINARY_NAME:nightly-$VERSION nexthat/$BINARY_NAME:nightly-$VERSION
-    # - name: Log in to Docker Hub
-    #   uses: docker/login-action@v1
-    #   with:
-    #     username: ${{ secrets.DOCKERHUB_USER }}
-    #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-    # - name: Pull image
-    #   run: |
-    #     docker push nexthat/$BINARY_NAME:nightly
-    #     docker push nexthat/$BINARY_NAME:nightly-$VERSION
     - name: Test if release already exists
       id: release-exists
       continue-on-error: true
@@ -61,7 +40,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
     - name: Create new draft release
       if: steps.release-exists.outcome == 'failure' && steps.release-exists.conclusion == 'success'
-      run: gh release create -d $BINARY_NAME-nightly-$VERSION --generate-notes /tmp/$BINARY_NAME-nightly-$VERSION.tar.gz#nanocld-image
+      run: gh release create -d $BINARY_NAME-nightly-$VERSION --generate-notes .//$BINARY_NAME-nightly-$VERSION.tar.gz#nanocld-image
       env:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
     - name: Update draft release
