--- a/.github/workflows/nightly_nanocld.yml
+++ b/.github/workflows/nightly_nanocld.yml
@@ -18,43 +18,34 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    # Install buildx
     - name: Set up Docker Buildx
       id: buildx
       uses: docker/setup-buildx-action@v2
+    # Set buildx cache
     - name: Cache register
       uses: actions/cache@v3
       with:
         path: /tmp/.buildx-cache
         key: buildx-cache
-    - name: Set branch name
-      run: echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-    - name: Print branch name
-      run: echo $BRANCH_NAME
-    - name: Get bin name
-      run: echo "BINARY_NAME=$(echo $BRANCH_NAME | awk -F- '{print $2}')" >> $GITHUB_ENV
-    - name: Set version
-      run: echo "VERSION=$(echo $BRANCH_NAME | awk -F- '{print $3}')" >> $GITHUB_ENV
-    - name: Print BINARY_NAME and VERSION
+    # Extract branch info
+    - name: Set info
       run: |
+        echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
+        echo "BINARY_NAME=$(echo $BRANCH_NAME | awk -F- '{print $2}')" >> $GITHUB_ENV
+        echo "CHANNEL=$(echo $BRANCH_NAME | awk -F- '{print $1}')" >> $GITHUB_ENV
+        echo "VERSION=$(echo $BRANCH_NAME | awk -F- '{print $3}')" >> $GITHUB_ENV
+        echo $BRANCH_NAME
         echo $BINARY_NAME
+        echo $CHANNEL
         echo $VERSION
+    # Build daemon image
     - name: Build image
       run: docker buildx build --load --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/.buildx-cache -t $BINARY_NAME:nightly-$VERSION -f ./bin/nanocld/Dockerfile .
-    # - name: Tag image
-    #   run: |
-    #     docker tag $BINARY_NAME:nightly-$VERSION nexthat/$BINARY_NAME:nightly
-    #     docker tag $BINARY_NAME:nightly-$VERSION nexthat/$BINARY_NAME:nightly-$VERSION
-    # - name: Log in to Docker Hub
-    #   uses: docker/login-action@v1
-    #   with:
-    #     username: ${{ secrets.DOCKERHUB_USER }}
-    #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-    # - name: Pull image
-    #   run: |
-    #     docker push nexthat/$BINARY_NAME:nightly
-    #     docker push nexthat/$BINARY_NAME:nightly-$VERSION
+    # Export it as tar.gz
     - name: Export image
       run: docker save $BINARY_NAME:nightly-$VERSION | gzip > /tmp/$BINARY_NAME-nightly-$VERSION.tar.gz
+    # Upload it to release
     - name: Test if release already exists
       id: release-exists
       continue-on-error: true
