--- a/.github/workflows/nightly_nanocl.yml
+++ b/.github/workflows/nightly_nanocl.yml
@@ -40,7 +40,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
     - name: Create new draft release
       if: steps.release-exists.outcome == 'failure' && steps.release-exists.conclusion == 'success'
-      run: gh release create -d $BINARY_NAME-nightly-$VERSION --generate-notes ./target/debian/$BINARY_NAME-$VERSION.tar.gz#deb
+      run: gh release create -d $BINARY_NAME-nightly-$VERSION --generate-notes $(pwd)/target/debian/$BINARY_NAME-$VERSION.tar.gz#deb
       env:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
     - name: Update draft release
