--- a/.github/workflows/nightly_nanocl.yml
+++ b/.github/workflows/nightly_nanocl.yml
@@ -22,9 +22,9 @@ jobs:
     - name: Set info
       run: |
         echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-        echo "BINARY_NAME=$(echo $BRANCH_NAME | awk -F- '{print $2}')" >> $GITHUB_ENV
-        echo "CHANNEL=$(echo $BRANCH_NAME | awk -F- '{print $1}')" >> $GITHUB_ENV
-        echo "VERSION=$(echo $BRANCH_NAME | awk -F- '{print $3}')" >> $GITHUB_ENV
+        echo "CHANNEL=$(echo ${GITHUB_REF##*/}) | awk -F- '{print $1}')" >> $GITHUB_ENV
+        echo "BINARY_NAME=$(echo ${GITHUB_REF##*/}) | awk -F- '{print $2}')" >> $GITHUB_ENV
+        echo "VERSION=$(echo ${GITHUB_REF##*/}) | awk -F- '{print $3}')" >> $GITHUB_ENV
         echo $BRANCH_NAME
         echo $BINARY_NAME
         echo $CHANNEL
@@ -40,13 +40,13 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
     - name: Create new draft release
       if: steps.release-exists.outcome == 'failure' && steps.release-exists.conclusion == 'success'
-      run: gh release create -d $BINARY_NAME-nightly-$VERSION --generate-notes $(pwd)/target/debian/$BINARY_NAME-$VERSION.tar.gz#deb
+      run: gh release create -d $BINARY_NAME-nightly-$VERSION --generate-notes $(pwd)/target/debian/$BINARY_NAME-$VERSION.deb#deb
       env:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
     - name: Update draft release
       if: steps.release-exists.outcome == 'success' && steps.release-exists.conclusion == 'success'
       run: >-
-        gh release delete-asset -y $BINARY_NAME-$VERSION.tar.gz
-        gh release upload $BINARY_NAME-$VERSION.tar.gz ./target/debian/$BINARY_NAME-$VERSION.tar.gz#deb;
+        gh release delete-asset -y $BINARY_NAME-$VERSION.deb
+        gh release upload $BINARY_NAME-$VERSION.deb ./target/debian/$BINARY_NAME-$VERSION.deb#deb;
       env:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
