--- a/.github/workflows/nightly_nanocld.yml
+++ b/.github/workflows/nightly_nanocld.yml
@@ -32,9 +32,9 @@ jobs:
     - name: Set info
       run: |
         echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-        echo "BINARY_NAME=$(echo $BRANCH_NAME | awk -F- '{print $2}')" >> $GITHUB_ENV
-        echo "CHANNEL=$(echo $BRANCH_NAME | awk -F- '{print $1}')" >> $GITHUB_ENV
-        echo "VERSION=$(echo $BRANCH_NAME | awk -F- '{print $3}')" >> $GITHUB_ENV
+        echo "CHANNEL=$(echo ${GITHUB_REF##*/}) | awk -F- '{print $1}')" >> $GITHUB_ENV
+        echo "BINARY_NAME=$(echo ${GITHUB_REF##*/}) | awk -F- '{print $2}')" >> $GITHUB_ENV
+        echo "VERSION=$(echo ${GITHUB_REF##*/}) | awk -F- '{print $3}')" >> $GITHUB_ENV
         echo $BRANCH_NAME
         echo $BINARY_NAME
         echo $CHANNEL
