--- a/.github/workflows/nightly_nanocl.yml
+++ b/.github/workflows/nightly_nanocl.yml
@@ -18,6 +18,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        target: x86_64-unknown-linux-musl
     # Extract branch info
     - name: Set info
       run: |
@@ -25,6 +29,8 @@ jobs:
         echo "CHANNEL=$(echo ${GITHUB_REF##*/}) | awk -F- '{print $1}')" >> $GITHUB_ENV
         echo "BINARY_NAME=$(echo ${GITHUB_REF##*/}) | awk -F- '{print $2}')" >> $GITHUB_ENV
         echo "VERSION=$(echo ${GITHUB_REF##*/}) | awk -F- '{print $3}')" >> $GITHUB_ENV
+    # Print info for debug
+    - name: Print Info
         echo $BRANCH_NAME
         echo $BINARY_NAME
         echo $CHANNEL
