--- a/.github/workflows/nightly_nanocl.yml
+++ b/.github/workflows/nightly_nanocl.yml
@@ -26,9 +26,9 @@ jobs:
     - name: Set info
       run: |
         echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-        echo "CHANNEL=$(echo ${GITHUB_REF##*/}) | awk -F- '{print $1}')" >> $GITHUB_ENV
-        echo "BINARY_NAME=$(echo ${GITHUB_REF##*/}) | awk -F- '{print $2}')" >> $GITHUB_ENV
-        echo "VERSION=$(echo ${GITHUB_REF##*/}) | awk -F- '{print $3}')" >> $GITHUB_ENV
+        echo "CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $1}')" >> $GITHUB_ENV
+        echo "BINARY_NAME=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}')" >> $GITHUB_ENV
+        echo "VERSION=$(echo ${GITHUB_REF##*/} | awk -F- '{print $3}')" >> $GITHUB_ENV
     # Print info for debug
     - name: Print Info
       run: |
@@ -36,6 +36,10 @@ jobs:
         echo $BINARY_NAME
         echo $CHANNEL
         echo $VERSION
+    # Install required dependencies
+    - name: Install dependencies
+      run: |
+        sudo apt install gcc make musl-dev
     # Package nanocl into a .deb
     - name: Package
       run: ./scripts/release_nanocl.sh
