--- a/.github/workflows/nightly_nanocl.yml
+++ b/.github/workflows/nightly_nanocl.yml
@@ -21,6 +21,7 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
+        target: x86_64-unknown-linux-musl
     # Extract branch info
     - name: Set info
       run: |
@@ -38,7 +39,7 @@ jobs:
     # Install required dependencies
     - name: Install dependencies
       run: |
-        sudo apt install gcc make musl-dev openssl git
+        sudo apt-get install -y gcc make musl musl-dev linux-musl-dev openssl git libgcc
         rustup target add x86_64-unknown-linux-musl
     # Package nanocl into a .deb
     - name: Package
