--- a/.github/workflows/nightly_nanocl.yml
+++ b/.github/workflows/nightly_nanocl.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions-rs/toolchain@v1
       with:
-        toolchain: stable
+        toolchain: 1.67.1
         target: x86_64-unknown-linux-musl
     # Extract branch info
     - name: Set info
@@ -39,7 +39,7 @@ jobs:
     # Install required dependencies
     - name: Install dependencies
       run: |
-        sudo apt-get install -y gcc make musl musl-dev linux-musl-dev openssl git libgcc
+        sudo apt-get install -y gcc make musl musl-dev openssl git libgcc
         rustup target add x86_64-unknown-linux-musl
     # Package nanocl into a .deb
     - name: Package
