--- a/.github/workflows/nightly_nanocl.yml
+++ b/.github/workflows/nightly_nanocl.yml
@@ -39,7 +39,7 @@ jobs:
     # Install required dependencies
     - name: Install dependencies
       run: |
-        sudo apt-get install -y gcc make musl musl-dev openssl git libgcc
+        sudo apt-get install -y gcc make musl musl-dev openssl git
         rustup target add x86_64-unknown-linux-musl
     # Package nanocl into a .deb
     - name: Package
