--- a/.github/workflows/nightly_nanocl.yml
+++ b/.github/workflows/nightly_nanocl.yml
@@ -57,7 +57,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
     - name: Update draft release
       if: steps.release-exists.outcome == 'success' && steps.release-exists.conclusion == 'success'
-      run: >-
+      run: |
         gh release delete-asset -y ${BINARY_NAME}_${VERSION}_amd64.deb
         gh release upload ${BINARY_NAME}_${VERSION}_amd64.deb target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#nanocl_amd64.deb
       env:
