--- a/.github/workflows/nightly_nanocl.yml
+++ b/.github/workflows/nightly_nanocl.yml
@@ -27,9 +27,9 @@ jobs:
       run: |
         echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
         echo "CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}')" >> $GITHUB_ENV
+        echo "NANOCL_CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}')" >> $GITHUB_ENV
         echo "BINARY_NAME=$(echo ${GITHUB_REF##*/} | awk -F- '{print $3}')" >> $GITHUB_ENV
         echo "VERSION=$(echo ${GITHUB_REF##*/} | awk -F- '{print $4}')" >> $GITHUB_ENV
-        echo "NANOCL_CHANNEL=$CHANNEL" >> $GITHUB_ENV
     # Print info for debug
     - name: Print Info
       run: |
