--- a/.github/workflows/nightly_nanocld.yml
+++ b/.github/workflows/nightly_nanocld.yml
@@ -32,10 +32,10 @@ jobs:
     - name: Set info
       run: |
         echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-        echo "CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}')" >> $GITHUB_ENV
-        echo "NANOCL_CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}')" >> $GITHUB_ENV
-        echo "BINARY_NAME=$(echo ${GITHUB_REF##*/} | awk -F- '{print $3}')" >> $GITHUB_ENV
-        echo "VERSION=$(echo ${GITHUB_REF##*/} | awk -F- '{print $4}')" >> $GITHUB_ENV
+        echo "CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}'}" >> $GITHUB_ENV
+        echo "NANOCL_CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}'}" >> $GITHUB_ENV
+        echo "BINARY_NAME=$(echo ${GITHUB_REF##*/} | awk -F- '{print $3}'}" >> $GITHUB_ENV
+        echo "VERSION=$(echo ${GITHUB_REF##*/} | awk -F- '{print $4}'}" >> $GITHUB_ENV
     # Print info for debug
     - name: Print Info
       run: |
