--- a/.github/workflows/stable_nanocld.yml
+++ b/.github/workflows/stable_nanocld.yml
@@ -1,4 +1,4 @@
-name: Draft nanocld table release
+name: Draft nanocld stable release
 
 on:
   push:
@@ -45,7 +45,7 @@ jobs:
         echo $VERSION
     # Build daemon image
     - name: Build image
-      run: docker buildx build --load --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/.buildx-cache --build-arg channel=$CHANNEL -t $BINARY_NAME:nightly-$VERSION -f ./bin/nanocld/Dockerfile .
+      run: docker buildx build --load --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/.buildx-cache --build-arg channel=$CHANNEL -t $BINARY_NAME:$VERSION -f ./bin/nanocld/Dockerfile .
     # Export it as tar.gz
     - name: Export image
       run: docker save $BINARY_NAME:$VERSION | gzip > /tmp/$BINARY_NAME-$VERSION.tar.gz
