--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,3 +38,12 @@ jobs:
           docker push nexthat/nanocld:nightly-$VERSION
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
+      - name: Publish nanocl stable
+        if: env.CHANNEL != 'nightly' && env.BINARY_NAME == 'nanocld'
+        run: |
+          gh release download ${{ github.event.release.tagName }} -p nanocld-$VERSION.tar.gz
+          cat nanocld-$VERSION.tar.gz | docker load
+          docker tag nanocld:$VERSION nexthat/nanocld:latest
+          docker tag nanocld:$VERSION nexthat/nanocld:$VERSION
+          docker push nexthat/nanocld:latest
+          docker push nexthat/nanocld:$VERSION
