bugfix(workflow) publish

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,11 +39,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
       - name: Publish nanocl stable
-        if: env.CHANNEL != 'nightly' && env.BINARY_NAME == 'nanocld'
+        if: env.CHANNEL != 'nightly' && env.CHANNEL == 'nanocld'
         run: |
-          gh release download ${{ github.event.release.tagName }} -p nanocld-$VERSION.tar.gz
-          cat nanocld-$VERSION.tar.gz | docker load
-          docker tag nanocld:$VERSION nexthat/nanocld:latest
-          docker tag nanocld:$VERSION nexthat/nanocld:$VERSION
+          gh release download ${{ github.event.release.tagName }} -p nanocld-$BINARY_NAME.tar.gz
+          cat nanocld-$BINARY_NAME.tar.gz | docker load
+          docker tag nanocld:$BINARY_NAME nexthat/nanocld:latest
+          docker tag nanocld:$BINARY_NAME nexthat/nanocld:$BINARY_NAME
           docker push nexthat/nanocld:latest
-          docker push nexthat/nanocld:$VERSION
+          docker push nexthat/nanocld:$BINARY_NAME
