--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -19,8 +19,8 @@ jobs:
           echo "VERSION=$(echo ${{ github.event.release.name }} | awk -F- '{print $3}')" >> $GITHUB_ENV
       - name: Print info
         run: |
-          echo $CHANNEL
           echo $BINARY_NAME
+          echo $CHANNEL
           echo $VERSION
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
@@ -30,7 +30,7 @@ jobs:
       - name: Publish nanocld nightly
         if: env.CHANNEL == 'nightly' && env.BINARY_NAME == 'nanocld'
         run: |
-          gh release download ${{ github.event.release.tagName }} -p nanocld-nightly-$VERSION.tar.gz
+          gh release download $BINARY_NAME-nightly-$VERSION -p nanocld-nightly-$VERSION.tar.gz
           cat nanocld-nightly-$VERSION.tar.gz | docker load
           docker tag nanocld:nightly-$VERSION nexthat/nanocld:nightly
           docker tag nanocld:nightly-$VERSION nexthat/nanocld:nightly-$VERSION
@@ -41,7 +41,7 @@ jobs:
       - name: Publish nanocld stable
         if: env.CHANNEL != 'nightly' && env.BINARY_NAME == 'nanocld'
         run: |
-          gh release download ${{ github.event.release.tagName }} -p nanocld-$CHANNEL.tar.gz
+          gh release download $BINARY_NAME-$VERSION -p nanocld-$CHANNEL.tar.gz
           cat nanocld-$CHANNEL.tar.gz | docker load
           docker tag nanocld:$CHANNEL nexthat/nanocld:latest
           docker tag nanocld:$CHANNEL nexthat/nanocld:$CHANNEL
