refactor: deploy example

--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -24,7 +24,6 @@ Cargoes:
     # https://docs.docker.com/engine/api/v1.42/#tag/Container/operation/ContainerCreate
     Container:
       Image: nexthat/nanocl-get-started:latest
-      Env :
-        - NODE_ENV=production
-        - APP=LANDING
-        - TEST=gg
+      Env:
+        - TEST=GG
+        - APP=GET_STARTED
