--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -13,10 +13,11 @@ repository = "https://github.com/nxthat/nanocl"
 bench = false
 
 [features]
-serde = ["dep:serde", "uuid/serde"]
+serde = ["dep:serde", "uuid/serde", "chrono/serde"]
 
 [dependencies]
 bollard-next = { version = "0.14.1" }
 uuid = { version = "1.2.2" }
 serde = { version = "1.0.152", features = ["derive"], optional = true }
 serde_json = "1.0.91"
+chrono = "0.4.23"
