--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -39,7 +39,7 @@ serde_json = "1.0.89"
 thiserror = "1.0.37"
 ntex = { version = "0.6.3", features = ["rustls", "tokio"] }
 serde = { version = "1.0", features = ["derive"] }
-clap = { version = "4.1.7", features = ["derive"] }
+clap = { version = "4.1.7", features = ["derive", "cargo"] }
 url = { version = "2.3.1", features = ["serde"] }
 tokio = { version = "1.23.1", features = ["fs"] }
 hyper = "0.14.20"
@@ -48,3 +48,5 @@ users = "0.11.0"
 tokio-util = "0.7.7"
 chrono = "0.4.23"
 libc = "0.2.139"
+mustache = "0.9.0"
+dialoguer = "0.10.3"
