--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -31,3 +31,15 @@ Cargoes:
       Env:
         - TEST=GG
         - APP=GET_STARTED
+  - Name: deploy-example2
+    # See all options:
+    # https://docs.docker.com/engine/api/v1.42/#tag/Container/operation/ContainerCreate
+    Container:
+      Image: nexthat/nanocl-get-started:latest
+      HostConfig:
+        Binds: [
+          "./test_local:/test"
+        ]
+      Env:
+        - TEST=GG
+        - APP=GET_STARTED
