feature: Path versioning with datastructure version (#157)
* feature(nanocld) Path versioning with datascruture version

* refactor(nanocld) Cargo key generation and versioning

* refactor: added created_at on all models

* feature: cargo autoremove

* feature(nanocl) state apply attach to see logs

* doc(man) added more man page

* feature(nanocl): state with args and envs and confirm prompt

* refactor(nanocl) added confirm prompt for namespace deletion

* refactor(nanocl): remove with confirm prompt

* save

* refactor(scripts): 755 mode

* refactor: tests

--- a/examples/cargo_autoremove.yml
+++ b/examples/cargo_autoremove.yml
@@ -1,11 +1,16 @@
 Type: Cargo
 ApiVersion: v0.2
 
-Namespace: cargo-example
+Namespace: global
 
 Cargoes:
-  - Name: cargo-example
+  - Name: cargo-autoremove
     # See all options:
     # https://docs.docker.com/engine/api/v1.42/#tag/Container/operation/ContainerCreate
     Container:
-      Image: nexthat/nanocl-get-started:latest
+      Image: busybox:uclibc
+      Cmd:
+        - sleep
+        - "20"
+      HostConfig:
+        AutoRemove: true
