refactor(nanocld): resource kind are now dynamic and can be added in database using Custom resource to create types

--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -54,3 +54,4 @@ libc = "0.2.139"
 utoipa = { version = "3.0.2", features = ["uuid", "chrono"], optional = true }
 metrsd_client = "0.1.1"
 chrono = { version = "0.4.23", features = ["serde"] }
+jsonschema = { version = "0.16.1", default-features = false }
