--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -12,6 +12,14 @@ repository = "https://github.com/nxthat/nanocl"
 [lib]
 bench = false
 
+[build-dependencies]
+schemars = "0.8.12"
+serde = { version = "1.0.152", features = ["derive"], optional = true }
+serde_json = "1.0.91"
+chrono = "0.4.23"
+uuid = { version = "1.2.2" }
+serde_yaml = "0.9"
+
 [features]
 serde = ["dep:serde", "uuid/serde", "chrono/serde"]
 
@@ -21,3 +29,4 @@ uuid = { version = "1.2.2" }
 serde = { version = "1.0.152", features = ["derive"], optional = true }
 serde_json = "1.0.91"
 chrono = "0.4.23"
+schemars = "0.8.12"
