--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -6,17 +6,19 @@ Namespace: global
 Resources:
   - Name: deploy-example.com
     Kind: ProxyRule
+    Version: v0.5
     Config:
       Watch:
         - get-started@global
-      Http:
-        Domain: deploy-example.com
-        Network: Public
-        Locations:
-          - Path: /
-            Target:
-              Key: get-started@global
-              Port: 9000
+      Rule:
+        Http:
+          Domain: deploy-example.com
+          Network: Public
+          Locations:
+            - Path: /
+              Target:
+                Key: get-started@global
+                Port: 9000
 
 Cargoes:
   - Name: deploy-example
@@ -26,6 +28,7 @@ Cargoes:
       Image: nexthat/nanocl-get-started:latest
       Env:
         - APP=GET_STARTED1
+
   - Name: deploy-example2
     # See all options:
     # https://docs.docker.com/engine/api/v1.42/#tag/Container/operation/ContainerCreate
