--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/main.rs"
 
 [features]
 default = []
-dev = ["dep:utoipa"]
+dev = ["dep:utoipa", "nanocl_stubs/utoipa"]
 
 [build-dependencies]
 clap = { version = "4.1.7", features = ["derive"] }
