--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -13,6 +13,7 @@ repository = "https://github.com/nxthat/nanocl"
 bench = false
 
 [features]
+utoipa = ["dep:utoipa"]
 serde = ["dep:serde", "uuid/serde", "chrono/serde"]
 
 [dependencies]
@@ -21,3 +22,5 @@ uuid = { version = "1.2.2" }
 serde = { version = "1.0.152", features = ["derive"], optional = true }
 serde_json = "1.0.91"
 chrono = "0.4.23"
+# Dependency required with dev feature
+utoipa = { version = "3.0.2", features = ["uuid", "chrono"], optional = true }
