bugfix(nanocl): Exec and State Handle vector of arguments

--- a/examples/deploy_args_example.yml
+++ b/examples/deploy_args_example.yml
@@ -10,6 +10,7 @@ Args:
 Resources:
   - Name: "{{Args.domain}}"
     Kind: ProxyRule
+    Version: v0.1
     Config:
       Watch:
         - get-started@global
