wip: image upload

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ strip = "debuginfo"
 [patch.crates-io]
 nanocl_stubs = { path = "crates/nanocl_stubs" }
 nanocld_client = { path = "crates/nanocld_client" }
+ntex = { git = "https://github.com/ntex-rs/ntex" }
+ntex-tokio = { git = "https://github.com/ntex-rs/ntex" }
