wip: vm create delete start and stop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,5 @@
   "editor.trimAutoWhitespace": true,
   "editor.formatOnSave": true,
   "files.insertFinalNewline": true,
-  "files.trimTrailingWhitespace": true,
-  "rust-analyzer.checkOnSave.command": "clippy"
+  "files.trimTrailingWhitespace": true
 }
