--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,6 +35,8 @@ jobs:
     # Prepare CI
     - name: Prepare CI
       run: |
+        wget https://cloud-images.ubuntu.com/minimal/releases/jammy/release/ubuntu-22.04-minimal-cloudimg-amd64.img
+        mv ubuntu-22.04-minimal-cloudimg-amd64.img /tmp
         sudo ./scripts/prepare_tests.sh
         sudo mkdir -p /tmp
         sudo chmod 777 /tmp
