feature: virtual machine (#168)
* feature: virtual machine

* wip: image upload

* wip: vm create

* wip: vm create delete start and stop

* Clean code

* tests(nanocld): Added service tests for vm image

* tests(nanocld): Improoved vm image test

* feature(nanocld): vm image snapshot and name validation

* bugfix(nanocld): ensure snapshot name is not already used

* tests(nanocld): vm image snapshot and better tests

* feature: Virtual machine

* feature: vm fully working

* feature: fully working in container

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,9 +35,11 @@ jobs:
     # Prepare CI
     - name: Prepare CI
       run: |
-        sudo ./scripts/prepare_tests.sh
-        sudo mkdir -p /tmp
+        wget https://cloud-images.ubuntu.com/minimal/releases/jammy/release/ubuntu-22.04-minimal-cloudimg-amd64.img
+        mv ubuntu-22.04-minimal-cloudimg-amd64.img /tmp
+        sudo apt-get install -y qemu-utils
         sudo chmod 777 /tmp
+        sudo ./scripts/prepare_tests.sh
     # Setup daemon for the tests
     - name: Setup
       run: |
