--- a/examples/resource_ssl_example.yml
+++ b/examples/resource_ssl_example.yml
@@ -2,22 +2,23 @@ Type: Resource
 ApiVersion: v0.2
 
 Resources:
-  - Name: resource-example
-    Kind: ProxyRule
-    Version: v0.1
-    Config:
-      Watch:
-        - get-started@global
-      Rule:
-        Http:
-          Domain: get-started.com
-          Network: Public
-          Ssl:
-            Certificate: /random/path/to/cert
-            CertificateKey: /random/path/to/key
-            SslDhParam: /random/path/to/param
-          Locations:
-            - Path: /
-              Target:
-                Key: get-started@global
+- Name: resource-example
+  Kind: ProxyRule
+  Version: v0.1
+  Config:
+    Watch:
+      - get-started.global
+    Rule:
+      Http:
+        Domain: get-started.com
+        Network: Public
+        Ssl:
+          Certificate: /random/path/to/cert
+          CertificateKey: /random/path/to/key
+          SslDhParam: /random/path/to/param
+        Locations:
+          - Path: /
+            Target:
+              Cargo:
+                Key: get-started.global
                 Port: 9000
