feature(nanocld) Container image labels

--- a/bin/nanocld/Dockerfile
+++ b/bin/nanocld/Dockerfile
@@ -46,5 +46,9 @@ COPY ./bin/nanocld/entrypoint.sh /entrypoint.sh
 
 RUN chmod +x /entrypoint.sh
 
+
+LABEL org.opencontainers.image.source https://github.com/nxthat/nanocl
+LABEL org.opencontainers.image.description The nanocl daemon
+
 ## Set entrypoint
 ENTRYPOINT ["/bin/bash", "/entrypoint.sh"]
