--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ strip = "debuginfo"
 [patch.crates-io]
 nanocl_stubs = { path = "crates/nanocl_stubs" }
 nanocld_client = { path = "crates/nanocld_client" }
+# ntex-multipart = { git = "https://github.com/leon3s/ntex-extras" }
 # bollard-next = { path = "../bollard" }
 #ntex = { git = "https://github.com/ntex-rs/ntex" }
 #ntex-tokio = { git = "https://github.com/ntex-rs/ntex" }
